<resources>
    <string name="app_name">MessengerApp</string>
    <string name="usernamePH">Username</string>
    <string name="emailPH">Email</string>
    <string name="passwordPH">Password</string>
    <string name="registerTextButton">Register</string>
    <string name="haveAnAccountAlready">Already have an account?</string>
    <string name="loginTextButton">Login</string>
    <string name="backToRegisterText">Don\'t have an account?</string>
    <string name="photoSelect">Select Photo</string>
</resources>
