<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009688"
    tools:context=".RegisterActivity" >

    <Button
        android:id="@+id/photoSelector"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/photo_select_circle"
        android:text="@string/photoSelect"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/username_edittext_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username_edittext_register"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/corner_radius"
        android:ems="10"
        android:hint="@string/usernamePH"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/photoSelector" />

    <EditText
        android:id="@+id/email_edittext_register"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/corner_radius"
        android:ems="10"
        android:hint="@string/emailPH"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="@+id/username_edittext_register"
        app:layout_constraintStart_toStartOf="@+id/username_edittext_register"
        app:layout_constraintTop_toBottomOf="@+id/username_edittext_register"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/password_edittext_register"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/corner_radius"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/email_edittext_register"
        app:layout_constraintStart_toStartOf="@+id/email_edittext_register"
        app:layout_constraintTop_toBottomOf="@+id/email_edittext_register"
        android:layout_marginTop="30dp"
        android:hint="@string/passwordPH"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        />

    <Button
        android:id="@+id/register_button_register"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/corner_radius"
        app:layout_constraintEnd_toEndOf="@+id/password_edittext_register"
        app:layout_constraintStart_toStartOf="@+id/password_edittext_register"
        app:layout_constraintTop_toBottomOf="@+id/password_edittext_register"
        android:layout_marginTop="30dp"
        android:text="@string/registerTextButton"

        />

    <TextView
        android:id="@+id/already_have_account_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/haveAnAccountAlready"
        app:layout_constraintEnd_toEndOf="@+id/register_button_register"
        app:layout_constraintStart_toStartOf="@+id/register_button_register"
        app:layout_constraintTop_toBottomOf="@+id/register_button_register"
        android:textColor="#FFFF"
        android:textStyle="bold"
        />
</androidx.constraintlayout.widget.ConstraintLayout>