<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009688"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/email_edittext_login"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/corner_radius"
        android:ems="10"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:inputType="textEmailAddress"
        android:hint="@string/emailPH"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password_edittext_login"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/corner_radius"
        android:ems="10"
        android:hint="@string/passwordPH"
        android:inputType="textPassword"
        android:layout_marginTop="30dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="@+id/email_edittext_login"
        app:layout_constraintStart_toStartOf="@+id/email_edittext_login"
        app:layout_constraintTop_toBottomOf="@+id/email_edittext_login" />

    <Button
        android:id="@+id/login_button_login"
        android:layout_width="250dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="@+id/password_edittext_login"
        app:layout_constraintStart_toStartOf="@+id/password_edittext_login"
        app:layout_constraintTop_toBottomOf="@+id/password_edittext_login"
        android:text="@string/loginTextButton"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:background="@drawable/corner_radius"
        />

    <TextView
        android:id="@+id/back_to_register_textview_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/backToRegisterText"
        app:layout_constraintEnd_toEndOf="@+id/login_button_login"
        app:layout_constraintStart_toStartOf="@+id/login_button_login"
        app:layout_constraintTop_toBottomOf="@+id/login_button_login"
        android:textColor="#FFFF"
        android:textStyle="bold"
        />
</androidx.constraintlayout.widget.ConstraintLayout>